# kiprec

./: .gitignore  README.md  pyproject.toml  setup.py  testit.py
kiprec/: BaseRecommender.py  PreferenceBasedRecommender.py  TopicRecommender.py  __init__.py  utils.py
